fix: remove margin from slide header for improved alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -234,6 +234,7 @@
   left: 0px !important;
   text-align: center;
   line-height: 1.15;
+  margin: 0;
 }
 
 .end-slide {
